Fixed thumbnail sizes on mobile

--- a/app/assets/stylesheets/sprangular.scss
+++ b/app/assets/stylesheets/sprangular.scss
@@ -9,6 +9,13 @@ body {
   padding: 70px 0 0 0;
 }
 
+.row.no-padding {
+  [class*="col-"] {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
 .img-responsive {
   width: 100%;
 }
